<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.mymedic.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    tools:context="com.example.user.mymedic.PatientTopBar"
    android:layout_alignParentTop="true"
    android:background="@color/secondaryDarkColor"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="5"
    >

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/slidebar_button"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/slidebar_icon" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:contentDescription="@string/mymedic_app_logo"
            android:gravity="center"
            android:padding="9dp"
            android:src="@drawable/app_logo" />

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:contentDescription="@string/notification_button"
        android:gravity="center"
        android:padding="18dp"
        android:scaleType="fitCenter"
        android:src="@drawable/notification__bell" />
</LinearLayout>

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="#2ECACF  "
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="  my prescriptions"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FBFE13"
            android:textSize="24sp" tools:targetApi="jelly_bean" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:adjustViewBounds="false"
            app:srcCompat="@drawable/search"
            android:background="@color/transparent"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/todo" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/MiddleSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#72BAF2"
        android:orientation="vertical"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/dropdown1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:contextClickable="true"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:spinnerMode="dropdown"
                app:srcCompat="@drawable/prescription"

                />

            <ImageButton
                android:id="@+id/dropdown"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:contextClickable="true"
                android:padding="20dp"
                android:spinnerMode="dropdown"
                app:srcCompat="@drawable/doctor" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#72BAF2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534">

        <EditText
            android:id="@+id/PrescriptionID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/prescription_id"
            android:layout_weight="1"
            android:textColor="#FFFFFF"/>

        <EditText

            android:id="@+id/DoctorName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:text="@string/doctor_name"
            android:textColor="#FFFFFF" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/BottomLayout"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/secondaryDarkColor"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="10"
                app:srcCompat="@drawable/sync" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:text="Sync Details !"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="194dp"
        android:layout_marginTop="8dp"
        android:background="#72BAF2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ListView
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="@color/secondaryLightColor" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>

